add create product in doc
